--- a/entrypoints/popup/App.css
+++ b/entrypoints/popup/App.css
@@ -1,3 +1,15 @@
+html, body {
+  min-width: 460px;
+  min-height: 660px;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  min-width: 460px;
+  min-height: 660px;
+}
+
 .card {
   padding: 2em;
 }
